NotificationViewMD: Use default scroll behavior.

NotificationViewMD overrides ScrollRectToVisible in order to show the
entire notification when scrolled by tab focus, but it's not necessary.

* ScrollRectToVisible(GetLocalBounds()) is called at least once from
  NotificationViewMD::OnFocus() so the entire notification is shown at
  this point.
* Overriding ScrollRectToVisible makes child buttons to not be scrolled
  properly when the notification is too tall.

TEST=manual
BUG=854151

Change-Id: Ic890cc33b2f74e41caf7a9e1a3b98d850cb937b3
Reviewed-on: https://chromium-review.googlesource.com/c/1293062
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601829}
Former-commit-id: 2819b8659153560cf923bfb4b6d507e0660cd893